--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "vite": "^4.3.9"
   },
   "dependencies": {
+    "@mapbox/polyline": "^1.2.0",
     "@netlify/functions": "^1.6.0",
+    "@types/geojson": "^7946.0.10",
     "axios": "^1.4.0",
     "lint-staged": "^13.2.3"
   },
