feat: add base neighborhoods map

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,9 @@
     "baseUrl": ".",
     "paths": {
       "$lib/*": ["src/lib/*"],
-      "$types/*": ["src/types/*"]
+      "$types/*": ["src/types/*"],
+      "$components/*": ["src/components/*"],
+      "$data/*": ["src/data/*"]
     },
     "types": ["svelte", "svelte-routing"]
   },
