--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "vite": "^4.3.9"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "@mapbox/polyline": "^1.2.0",
     "@netlify/functions": "^1.6.0",
     "@turf/boolean-intersects": "^6.5.0",
