Add Mapbox Integration (#3)
* feat: activity filtering, geoJSON types

* feat: add base neighborhoods map

* feat: add layers, hover effect

* chore: fix type for max length function

--- a/package.json
+++ b/package.json
@@ -34,9 +34,17 @@
     "vite": "^4.3.9"
   },
   "dependencies": {
+    "@mapbox/polyline": "^1.2.0",
     "@netlify/functions": "^1.6.0",
+    "@turf/boolean-intersects": "^6.5.0",
+    "@turf/helpers": "^6.5.0",
+    "@turf/union": "^6.5.0",
+    "@types/geojson": "^7946.0.10",
     "axios": "^1.4.0",
-    "lint-staged": "^13.2.3"
+    "lint-staged": "^13.2.3",
+    "mapbox-gl": "^2.15.0",
+    "turf-linestring": "^1.0.2",
+    "turf-point": "^2.0.1"
   },
   "lint-staged": {
     "*.{ts,tsx,svelte}": [
