--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@mapbox/polyline": "^1.2.0",
     "@netlify/functions": "^1.6.0",
     "@turf/boolean-intersects": "^6.5.0",
+    "@turf/center": "^6.5.0",
     "@turf/helpers": "^6.5.0",
     "@turf/union": "^6.5.0",
     "@types/geojson": "^7946.0.10",
